Fixed shadow on info-top small width large height Shadow was cut off on right side of periodic table

--- a/frontend/src/components/Footer/footer.scss
+++ b/frontend/src/components/Footer/footer.scss
@@ -9,8 +9,8 @@
 #footer {
   display: flex;
   justify-content: center;
-  padding-top: 3px;
-  padding-bottom: 3px;
+  padding-top: 4px;
+  padding-bottom: 4px;
   user-select: none;
 }
 
@@ -19,8 +19,8 @@
   // Font Family is roboto because it is not exactly content, but a title sort of
   font-family: robotoregular;
   font-size: 1em;
-  margin-left: 10px;
-  margin-right: 10px;
+  margin-left: 9px;
+  margin-right: 9px;
 }
 
 .link {
