--- a/frontend/src/components/PeriodicTable/periodic-table.scss
+++ b/frontend/src/components/PeriodicTable/periodic-table.scss
@@ -5,15 +5,11 @@ $total-rows: (7 * 2) + 5;
 // The periodic-table has width of 1, height of 0.6 relative to that width
 $elementRatio: 0.6;
 
+// GRID-CONTAINER-OUTER \\
 // Just for position relative
 #grid-container-outer {
   position: relative;
   border-radius: $border-radius;
-}
-
-.info-top #grid-container-outer {
-  // So scrollbar has rounded edges
-  overflow: auto;
 }
 
 .info-side .heightSame #grid-container-outer {
@@ -21,7 +17,14 @@ $elementRatio: 0.6;
   overflow: auto;
 }
 
-.info-side #grid-container {
+.info-top .heightSame #grid-container-outer {
+  // So scrollbar has rounded edges
+   overflow: auto;
+}
+
+
+// GRID-CONTAINER \\
+#grid-container {
   position: absolute;
   top: 0px;
   right: 0px;
@@ -33,16 +36,13 @@ $elementRatio: 0.6;
 .info-side .heightSame #grid-container {
   overflow: auto;
 }
-.info-top #grid-container {
-  position: absolute;
-  top: 0px;
-  right: 0px;
-  bottom: 0px;
-  left: 0px;
-  overflow: auto;
-  border-radius: $border-radius;
+
+.info-top .heightSame #grid-container {
+   overflow: auto;
 }
 
+
+// GRID-OUTER \\
 // Holds aspect ratio
 #grid-outer {
   position: relative;
@@ -51,19 +51,17 @@ $elementRatio: 0.6;
   padding-bottom: 100% * $elementRatio;
   transition: createTransitions((box-shadow, background-color));
   overflow: auto;
-  // border-radius: $border-radius;
-}
-
-.heightDifferent #grid-outer {
-  //.info-side is not in the declarationa above since we want the border-radius to appear on info-top
-  border-radius: $border-radius; // Only want this border when there is no scrollbar
-
 }
 
 #grid-outer:hover {
   transition: createTransitions((box-shadow, background-color));
 }
 
+.heightDifferent #grid-outer {
+  border-radius: $border-radius; // Only want this border when there is no scrollbar
+}
+
+// GRID \\
 // Main grid
 #grid {
   position: absolute;
@@ -71,8 +69,6 @@ $elementRatio: 0.6;
   right: 0px;
   bottom: 0px;
   left: 0px;
-  //min-width: 700px;
-  //min-height: 700 * $elementRatio;
 
   display: grid;
   grid-template-columns: 2.8% repeat($total-columns, 1fr);
